# bits-runner-builder

./: .gitignore  CMakeLists.txt  Extra.md  Grammar.md  Lexer.cpp  Lexer.h  README.md  Reference.md  Syntax.md  Token.cpp  Token.h  clean.sh  lines_count.sh  main.cpp  make.sh  test.brc
.github/workflows/: build_create_release.yml  build_macos.yml  create_release.yml
apps/: fib.brc
docs/: Casts.md  Extra.md  Notes.md  Reference.md
lib/B/: Array.brc  BSys.brc  Date.brc  String.brc
lib/b/: BSys.brc  String.brc
samples/: fib.brc  hello.brc  run_all.sh  test.brc  test_1.brc  test_2.brc
samples/callback/: build.bat  build.sh  io.brc  main.brc  utils.brc
samples/casts/: build.bat  build.sh  io.brc  main.brc
samples/date/: build.bat  build.sh  main.brc
samples/dyn_array/: build.sh  main.brc
samples/external_linkage/: build.bat  build.sh  io.brc  main.brc  stuff.brc
samples/fib/: build.bat  build.sh  main.brc
samples/fizz_buzz/: build.bat  build.sh
samples/hello/: build.bat  build.sh  console.brc  main.brc
samples/interfaces/: Lib.brc  build.sh  main.brc
samples/linked_list/: build.bat  build.sh  io.brc  main.brc
samples/merge_sort/: build.bat  build.sh  console.brc  io.brc  main.brc
samples/modules/: build.sh  sample_modules.brc
samples/multi_module/: build.bat  build.sh  console.brc  io.brc  main.brc  sample_multi_module.brc  stuff.brc
samples/primes/: build.bat  build.sh  main.brc
samples/strings/: build.bat  build.sh  main.brc
src/: CodeGenerator.cpp  CodeGenerator.h  Compiler.cpp  Compiler.h  Error.cpp  Error.h  Expression.cpp  Expression.h  Lexer.cpp  Lexer.h  Logger.cpp  Logger.h  ModuleBuilder.cpp  ModuleBuilder.h  Parser.cpp  Parser.h  Statement.cpp  Statement.h  Token.cpp  Token.h  Types.h  Utils.cpp  Utils.h  main.cpp  win_support.cpp  win_support.h
src/Analyzer/: Analyzer.cpp  Analyzer.h  AnalyzerScope.cpp  AnalyzerScope.h  TypesAnalyzer.cpp  TypesAnalyzer.h
src/CodeGenerator/: CodeGenerator.cpp  CodeGenerator.h
src/Compiler/: CodeGenerator.cpp  CodeGenerator.h  ModuleBuilder.cpp  ModuleBuilder.h  Scope.cpp  Scope.h  WrappedValue.cpp  WrappedValue.h
src/Lexer/: Lexer.cpp  Lexer.h  Location.cpp  Location.h  Token.cpp  Token.h
src/Module/: Module.cpp  Module.h  ModulesStore.cpp  ModulesStore.h
src/ModuleBuilder/: ModuleBuilder.cpp  ModuleBuilder.h  Scope.cpp  Scope.h  WrappedValue.cpp  WrappedValue.h
src/Parser/: Expression.cpp  Expression.h  Parsee.cpp  Parsee.h  Parser.cpp  Parser.h  Statement.cpp  Statement.h  ValueType.cpp  ValueType.h
src/Parser/Expression/: Expression.cpp  Expression.h  ExpressionArrayLiteral.cpp  ExpressionArrayLiteral.h  ExpressionBinary.cpp  ExpressionBinary.h  ExpressionBlock.cpp  ExpressionBlock.h  ExpressionCall.cpp  ExpressionCall.h  ExpressionCast.cpp  ExpressionCast.h  ExpressionChained.cpp  ExpressionChained.h  ExpressionCompositeLiteral.cpp  ExpressionCompositeLiteral.h  ExpressionGrouping.cpp  ExpressionGrouping.h  ExpressionIfElse.cpp  ExpressionIfElse.h  ExpressionInvalid.cpp  ExpressionInvalid.h  ExpressionLiteral.cpp  ExpressionLiteral.h  ExpressionUnary.cpp  ExpressionUnary.h  ExpressionValue.cpp  ExpressionValue.h  ExpressionVariable.cpp  ExpressionVariable.h
src/Parser/Parsee/: Parsee.cpp  Parsee.h  ParseeGroup.cpp  ParseeGroup.h  ParseeResult.cpp  ParseeResult.h  ParseeResultsGroup.cpp  ParseeResultsGroup.h
src/Parser/Statement/: Statement.cpp  Statement.h  StatementAssignment.cpp  (+45 more)
tests/: lib.sh  run_all.sh
tests/blob_data_member/: main.brc
tests/blob_fun_ret_boxed_f32/: main.brc
tests/blob_fun_ret_boxed_u32/: main.brc  run.sh
tests/blob_it/: run.sh
tests/blob_member_count/: main.brc  run.sh
tests/blob_member_data/: run.sh
tests/blob_member_named_type/: main.brc
tests/blob_member_ptr/: main.brc  run.sh
tests/blob_member_u32/: main.brc  run.sh
tests/blob_pointer_member/: run.sh
tests/blob_variable_it/: main.brc  run.sh
tests/blob_variable_member/: run.sh
tests/blob_variable_named_type/: run.sh
tests/cast_f32_to_u32/: main.brc
tests/data/: main.brc
tests/data_malloc/: main.brc  run.sh
tests/data_pointer/: main.brc  run.sh
tests/fun_arg_boxed/: main.brc
tests/fun_arg_data/: main.brc  run.sh
tests/fun_arg_f32/: main.brc  run.sh
tests/fun_arg_ptr/: main.brc
tests/fun_ret_boxed/: main.brc  run.sh
tests/function_arg_boxed/: run.sh
tests/function_pointer/: run.sh
tests/function_pointer_arg/: run.sh
tests/global_pointer/: main.brc
tests/global_ptr/: run.sh
tests/pointer_arithmetic/: main.brc  run.sh
tests/proto_member_variable/: main.brc  run.sh
tests/ptr_arithmetic/: run.sh
tests/ptr_function/: run.sh
tests/variable_boxed/: main.brc
tests/variable_pointer/: main.brc  run.sh
tests/variable_u32/: main.brc
tests/variable_vadr/: main.brc  run.sh
